# optimus-libvideogfx

./: COPYING  Doxyfile  Makefile.am  README  TODO  autogen.sh  configure.ac  libvideogfx-config.in  libvideogfx.m4  libvideogfx.spec.in
doc/images/: bitmap.eps
examples/: Makefile.am  audioout.cc  bitstream_output.cc  chromaspaces.cc  chromatest.cc  copytest.cc  cputest.cc  drawingtest.cc  dynarray.cc  filedisplay.cc  filtertest.cc  imagetest.cc  median.cc  persptransform.cc  pixmaptest.cc  ppmflip.cc  symmatrix.cc  test-libvideogfx.cc  v4ltest.cc  viewfile.cc  x11paint.cc  x11test.cc
libvideogfx/: Makefile.am  error.cc  error.hh  libvideogfx.hh.in  macros.hh  types.hh
libvideogfx/arch/: Makefile.am  cpu.cc  cpu.hh  mmx.h
libvideogfx/audio/fileio/: Makefile.am  audiosink.cc  audiosink.hh  audiosink_linux.cc  audiosink_linux.hh  timedsink.hh
libvideogfx/containers/: Makefile.am  array.hh  array.icc  array2.hh  array2.icc  dummy.cc  dynarray.hh  heap.hh  heap.icc  queue.hh  queue.icc  symmatrix.hh
libvideogfx/graphics/: Makefile.am
libvideogfx/graphics/color/: Makefile.am  colorspace.cc  colorspace.hh  img2raw.cc  img2raw.hh  internal_grey2rgb_mmx.cc  internal_grey2rgb_mmx.hh  internal_grey2rgb_scalar.cc  internal_grey2rgb_scalar.hh  internal_img2raw.hh  internal_rgb2rgb_scalar.cc  internal_rgb2rgb_scalar.hh  internal_yuv2rgb_mmx.cc  internal_yuv2rgb_mmx.hh  internal_yuv2rgb_scalar.cc  internal_yuv2rgb_scalar.hh
libvideogfx/graphics/datatypes/: bitmap.cc  bitmap.hh  image.cc  image.hh  image_tmpl.cc  primitives.hh
libvideogfx/graphics/draw/: blit.hh  draw.cc  draw.hh  format.cc  format.hh  pixelops.hh  scale.hh
libvideogfx/graphics/fileio/: Makefile.am  base.hh  ffmpeg.cc  ffmpeg.hh  ffmpeg_writer.cc  ffmpeg_writer.hh  imagesink.cc  imagesink.hh  jpeg.cc  jpeg.hh  mpeg.cc  mpeg.hh  mplayer.cc  mplayer.hh  png.cc  png.hh  ppm.cc  ppm.hh  raw.cc  raw.hh  unified_loader.cc  unified_loader.hh  unified_reader.cc  unified_reader.hh  unified_writer.cc  unified_writer.hh  uyvy.cc  uyvy.hh  v4l.cc  v4l.hh  yuv.cc  yuv.hh  yuv4mpeg.cc  yuv4mpeg.hh  yuv_vqeg.cc  yuv_vqeg.hh
libvideogfx/graphics/filters/: Makefile.am  binomial.cc  gauss_mmx.cc  linear.cc  linear.hh  linear.icc  median.cc  median.hh  scale.cc  scale.hh
libvideogfx/graphics/geometry/: Makefile.am  matrix.cc  matrix.hh  transform.cc  transform.hh
libvideogfx/graphics/measure/: Makefile.am  snr.cc  snr.hh  ssim.cc  ssim.hh
libvideogfx/graphics/visualize/: Makefile.am  regions.cc  regions.hh
libvideogfx/utility/: bitmanip.cc  bitmanip.hh  fastalloc.cc  fastalloc.hh  math.cc  math.hh  refcntr.hh  smartpointer.hh
libvideogfx/utility/bitstream/: Makefile.am  bitbuffer.cc  bitbuffer.hh  bitreader.cc  bitreader.hh  bitreader.icc  bitreader_fast.hh  bytebuffer.cc  bytebuffer.hh  inputstream.cc  inputstream.hh  inputstream_istr.cc  inputstream_istr.hh
libvideogfx/x11/: Makefile.am  dispimg.cc  dispimg.hh  draw_x11.cc  draw_x11.hh  imgwin.cc  imgwin.hh  server.cc  server.hh
