## Makefile.am for libvideogfx/utility/bitstream

libvideogfx_utility_bitstream_includedir = \
	$(includedir)/libvideogfx/utility/bitstream

noinst_LTLIBRARIES = libvideogfx-utility-bitstream.la

libvideogfx_utility_bitstream_la_SOURCES = \
	bitreader_fast.hh	\
	bitbuffer.hh \
	bitbuffer.cc \
	bitreader.cc	\
	bitreader.hh	